# coursera-algorithms

./: README.md
algorithmic-toolbox/divide-and-conquer/: binary_search.cpp  inversions.cpp  majority_element.cpp  sorting.cpp
algorithmic-toolbox/dynamic-programming/knapsack/: input.txt  knapsack.cpp
algorithmic-toolbox/dynamic-programming/primitive_calculator/: primitive_calculator.cpp
algorithmic-toolbox/greedy/change/: change.cpp
algorithmic-toolbox/greedy/covering_segments/: covering_segments.cpp  input1.txt
algorithmic-toolbox/greedy/different_summands/: different_summands.cpp
algorithmic-toolbox/greedy/dot_product/: dot_product.cpp
algorithmic-toolbox/greedy/fractional_knapsack/: fractional_knapsack.cpp
algorithmic-toolbox/greedy/largest_number/: largest_number.cpp
algorithmic-toolbox/introduction/: fibonacci.cpp  fibonacci_huge.cpp  fibonacci_last_digit.cpp  fibonacci_partial_sum.cpp  fibonacci_sum_last_digit.cpp  gcd.cpp  lcm.cpp
data-structures/hash_tables/hash_chaining/: CMakeLists.txt  hash_chaining.cpp  hash_chains.cpp
data-structures/hash_tables/phone_book/: CMakeLists.txt  phone_book.cpp
